:lipstick: fixing loader vertical align

--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -17,18 +17,18 @@ body {
   width: 100%;
   height: 100%;
   position: fixed;
+  display: table;
   top: 0;
   left: 0;
   z-index: 1;
   color: #ff74d0;
   text-align: center;
-  line-height: 50%;
-  padding-top: 40%;
 }
 
 #loader:before {
   animation: loader 4s infinite;
-  display: inline;
+  display: table-cell;
+  vertical-align: middle;
   content: "Loading";
 }
 
@@ -87,6 +87,7 @@ body {
   transition: max-height 1s, padding 1s;
   border: 4px double #ff74d0;
   padding: 16px 0;
+  margin-top: 16px;
 }
 
 .links a {
@@ -297,5 +298,5 @@ canvas {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
